--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,7 +11,7 @@
   "totalPrice": "Общая сумма",
   "seeMore": "СМОТРЕТЬ БОЛЬШЕ",
   "more": "Подробнее",
-  "UNP": "УНП 000000",
+  "UNP": "УНП HA7706126",
   "pageNotFoundTitle": "Страница не найдена",
   "to_main": "Вернуться на главную",
   "all_right_reserved": "Все права защищены.",
@@ -61,44 +61,17 @@
     "youBookOn": "Вы записаны на",
     "onDate": "",
     "on": "на",
-    "address": "по адресу: г. Гродно, ул. Горького, 65",
+    "address": "по адресу: г. Гродно, ул. Горького, 65-6",
     "sum": "Сумма к оплате"
   },
   "joinUsInstagram": "ПРИСОЕДИНЯЙТЕСЬ К НАМ в INSTAGRAM",
   "bookAppointment": "ЗАПИСАТЬСЯ НА МАССАЖ",
   "callUs": "ПОЗВОНИТЕ НАМ +375 (44) 585-98-44",
   "followUs": "Подпишитесь на нас в Instagram",
-  "address": "г. Гродно, ул. Горького, 65",
+  "address": "г. Гродно, ул. Горького, 65-6",
   "massageType": "Виды массажа",
   "massageAdvantages": "Преимущества массажа",
   "massages": {
-    "foot": {
-      "name": "Массаж ног",
-      "desc_1": "помогает расслабить мышцы и снять накопившееся напряжение. это особенно полезно после долгого дня стоя или ходьбы",
-      "desc_2": "способствует улучшению кровотока в ногах. Это помогает доставлять кислород и питательные вещества в ткани, а также удаление отходов и токсинов",
-      "desc_3": "помогает улучшить лимфатический дренаж и уменьшить отеки. Это особенно полезно для людей, страдающих от отеков ног после длительного сидения или стояния",
-      "desc_4": "способствует расслаблению и смягчению мышц ног, а также улучшению подвижности суставов. Это особенно полезно для спортсменов и людей, занимающихся физической активностью",
-      "desc_5": "уменьшает усталость и тяжесть в ногах, помогая восстановить их после длительных нагрузок. Это делает шаг легче и движения комфортнее",
-      "desc_6": "стимулирует нервные окончания на ступнях, что способствует общему расслаблению и снижению стресса. Это помогает улучшить самочувствие и качество сна"
-    },
-    "hand": {
-      "name": "Массаж рук",
-      "desc_1": "помогает расслабить напряженные мышцы и снять усталость после долгого дня работы или интенсивных физических нагрузок",
-      "desc_2": "стимулирует кровообращение в руках, что помогает доставлять больше кислорода и питательных веществ к клеткам, улучшая их функционирование",
-      "desc_3": "способствует снижению уровня стресса и тревоги, помогая расслабиться и улучшить настроение",
-      "desc_4": "улучшает подвижность и гибкость суставов, снять ощущение скованности и улучшить общую функциональность рук",
-      "desc_5": "уменьшает отеки и способствует улучшению лимфатического дренажа, особенно полезно для людей, которые много времени проводят с напряженными руками или кистями",
-      "desc_6": "помогает облегчить боль и дискомфорт при хронических заболеваниях рук, таких как артрит или тендинит, улучшая общую подвижность и снижая воспаление"
-    },
-    "honey": {
-      "name": "Медовый массаж",
-      "desc_1": "способствует усилению кровообращения в области, где применяется мед",
-      "desc_2": "помогает улучшить поступление кислорода и питательных веществ к тканям, а также удаление отходов и токсинов, способствуя их регенерации и оздоровлению",
-      "desc_3": "расслабление и снятие стресса: медовый массаж имеет релаксирующий эффект на организм",
-      "desc_4": "тепло меда и массажные движения помогают снять напряжение и стресс, способствуя общему расслаблению и улучшению настроения",
-      "desc_5": "мед содержит множество питательных веществ и антиоксидантов, которые благотворно влияют на кожу",
-      "desc_6": "медовый массаж помогает питать и увлажнять кожу, делая ее более мягкой, упругой и сияющей"
-    },
     "cupping": {
       "name": "Баночный массаж",
       "desc_1": "стимулирует кровообращение в области, где применяются банки",
@@ -108,41 +81,14 @@
       "desc_5": "является эффективным средством для борьбы с целлюлитом. вакуум, создаваемый банками, способствует улучшению кровообращения и лимфатического дренажа, что помогает разрушить жировые отложения и улучшить текстуру кожи",
       "desc_6": "оказывает стимулирующее воздействие на внутренние органы, способствуя их работе и улучшению общего здоровья"
     },
-    "classic": {
-      "name": "Классический массаж тела",
-      "desc_1": "помогает расслабить мышцы, освободив от накопившегося напряжения",
-      "desc_2": "способствует улучшению циркуляции крови, что в свою очередь способствует лучшему питанию тканей и органов",
-      "desc_3": "улучшение кровообращения: массаж способствует улучшению циркуляции крови, что в свою очередь способствует лучшему питанию тканей и органов",
-      "desc_4": "общее ощущение благополучия: процедура оставляет за собой чувство глубокого расслабления и умиротворения",
-      "desc_5": "снижение стресса и тревожности: расслабляющий эффект массажа помогает уменьшить уровень стресса и улучшить настроение",
-      "desc_6": "повышение гибкости и подвижности: регулярное выполнение массажа может способствовать увеличению гибкости мышц и суставов"
-    },
-    "facial": {
-      "name": "Массаж лица",
-      "desc_1": "стимулирует кровоток кожи, что помогает усилить поступление кислорода и питательных веществ к клеткам кожи",
-      "desc_2": "способствует улучшению тонуса и текстуры кожи, а также способствует ее оздоровлению и регенерации",
-      "desc_3": "помогает расслабить мышцы лица и снять накопившееся напряжение и стресс. Это может способствовать улучшению настроения и снижению уровня страха и тревоги",
-      "desc_4": "способствует стимуляции производства коллагена и эластина, двух важных компонентов, ответственных за упругость и молодость кожи",
-      "desc_5": "способствует улучшению дренажа лимфатической системы, что помогает удалить отходы и токсины из тканей и улучшить общее состояние кожи",
-      "desc_6": "помогает снять отечность и улучшить циркуляцию в области глаз, что помогает уменьшить появление темных кругов и отеков"
-    },
-    "backNack": {
-      "name": "Массаж спины и шеи",
+    "back": {
+      "name": "Массаж спины",
       "desc_1": "расслабление мышц. Массаж способствует улучшению циркуляции крови, что помогает снять напряжение и способствует более глубокому расслаблению",
       "desc_2": "массаж спины может эффективно снимать боли, связанные с мышечным напряжением, остеохондрозом или другими проблемами со спиной",
       "desc_3": "мягкое растяжение и массажные движения способствуют уменьшению боли и улучшению подвижности",
       "desc_4": "способствует выправлению позвоночника, укреплению мышц спины и предотвращению возможных деформаций",
       "desc_5": "стимулирует общее кровообращение и лимфодренаж, что помогает организму более эффективно поставлять кислород и питательные вещества в клетки",
       "desc_6": "способствует выделению эндорфинов, гормонов счастья, которые помогают снять стресс и улучшить настроение. Это также может помочь с борьбой с бессонницей и улучшением качества сна"
-    },
-    "relax": {
-      "name": "Расслабляющий массаж",
-      "desc_1": "способствует снижению уровня стресса и напряжения в организме. Это происходит благодаря стимуляции нервных окончаний, которые передают сигналы о расслаблении в головной мозг",
-      "desc_2": "расслабляющий массаж помогает снять мышечное напряжение, улучшить кровообращение и гибкость. Это может способствовать уменьшению боли в мышцах и суставах, а также улучшить осанку и двигательные функции",
-      "desc_3": "способствует улучшению дренажа лимфатической системы, что помогает удалить токсины и отходы из организма. Это способствует общему оздоровлению и улучшению иммунной системы",
-      "desc_4": "помогает улучшить качество и продолжительность сна. Он способствует уменьшению бессонницы, успокаивает нервную систему и создает состояние покоя и релаксации",
-      "desc_5": "помогает снять эмоциональное напряжение, улучшить настроение и общее эмоциональное состояние. Он способствует выработке эндорфинов - гормонов счастья, которые создают ощущение удовлетворения и благополучия",
-      "desc_6": "улучшение концентрации и умственной активности: расслабляющий массаж помогает снять умственное напряжение и улучшить концентрацию, способствуя лучшей работоспособности и ясности мысли"
     },
     "neckShoulder": {
       "name": "Массаж шейно-воротниковой зоны",
@@ -153,14 +99,41 @@
       "desc_5": "массаж шейно-воротниковой зоны оказывает благотворное воздействие на нервную систему, помогая снять стресс и напряжение",
       "desc_6": "способствует снижению усталости и улучшению общего самочувствия, помогая восстановить силы и повысить работоспособность"
     },
-    "sport": {
-      "name": "Спортивный массаж",
-      "desc_1": "помогает повысить свою физическую производительность. Он способствует улучшению кровообращения, расширению сосудов и увеличению поступления кислорода и питательных веществ к мышцам, что способствует улучшению силы, выносливости и гибкости",
-      "desc_2": "помогает быстрее восстанавливаться после тренировок и соревнований. Он способствует удалению метаболических отходов, снижает мышечное напряжение и усталость, а также ускоряет процесс заживления тканей после травм",
-      "desc_3": "является эффективным средством профилактики спортивных травм. Он помогает снять мышечные дисбалансы, улучшает гибкость и координацию, а также укрепляет мышцы, сухожилия и связки, что снижает риск возникновения травм",
-      "desc_4": "снимает мышечное напряжение и спазмы, что помогает улучшить подвижность суставов и общую гибкость. Это особенно полезно для спортсменов, которые испытывают повышенную нагрузку на определенные группы мышц",
-      "desc_5": "имеет не только физические, но и психологические преимущества. Он способствует расслаблению, снижению стресса и тревожности, улучшает настроение и общее благополучие спортсмена",
-      "desc_6": "способствует улучшению координации движений и снижению риска перегрузок, что особенно важно для спортсменов, стремящихся к высокой точности и эффективности в своих тренировках"
+    "individual_rejuvenation_program": {
+      "name": "Индивидуальная программа омоложения",
+      "desc_1": "направлен на сбор анамнеза и диагностику кожи для определения наиболее эффективных методов ухода",
+      "desc_2": "включает массаж шейно-воротниковой зоны для снятия напряжения и улучшения кровообращения",
+      "desc_3": "массаж волосистой части головы способствует расслаблению и улучшению состояния кожи головы",
+      "desc_4": "массаж зоны декольте помогает поддерживать упругость и эластичность кожи",
+      "desc_5": "различные техники массажа лица (миофасциальный, лимфодренажный, гуаша, асахи, буккальный) улучшают микроциркуляцию и контуры лица",
+      "desc_6": "лифтинг-маска завершает процедуру, помогая подтянуть кожу и придать ей сияющий вид"
+    },
+    "rejuvenating_facial_massage": {
+      "name": "Омолаживающий массаж лица",
+      "desc_1": "включает различные техники, такие как миофасциальный, лимфодренажный, массаж гуаша, асахи и буккальный для комплексного ухода за лицом",
+      "desc_2": "массаж зоны декольте помогает поддерживать упругость кожи и улучшать её текстуру",
+      "desc_3": "техники массажа лица усиливают микроциркуляцию, помогая уменьшить отёки и улучшить тонус кожи",
+      "desc_4": "массаж волосистой части головы способствует расслаблению и поддерживает здоровье волос и кожи головы",
+      "desc_5": "процедура помогает снять мышечное напряжение и стресс, делая кожу более свежей и сияющей",
+      "desc_6": "регулярные сеансы способствуют более чётким контурам лица и молодому внешнему виду"
+    },
+    "liftingMask": {
+      "name": "Лифтинг-маска",
+      "desc_1": "помогает подтянуть кожу, делая её более упругой и свежей",
+      "desc_2": "способствует улучшению овала лица и уменьшению морщин",
+      "desc_3": "обогащает кожу питательными веществами, придавая ей сияние",
+      "desc_4": "идеально завершает процедуры массажа, усиливая их эффект",
+      "desc_5": "помогает удерживать влагу в коже, предотвращая сухость",
+      "desc_6": "рекомендуется для всех типов кожи, особенно при первых признаках возрастных изменений"
+    },
+    "taping_one_zone": {
+      "name": "Тейпирование 1 зоны",
+      "desc_1": "помогает снять мышечное напряжение и улучшить кровообращение",
+      "desc_2": "способствует уменьшению отёков и лифтингу кожи",
+      "desc_3": "фиксирует кожу в правильном положении для более длительного эффекта после массажа",
+      "desc_4": "помогает разглаживать мелкие морщины и улучшать контуры лица",
+      "desc_5": "усиливает лимфодренажный эффект, способствуя выведению токсинов",
+      "desc_6": "подходит для локального воздействия на проблемные зоны, обеспечивая видимый результат"
     }
   },
   "aboutUsTitle": {
